styles/styles.css
@font-face {
  font-family: "Moon 2.0";
  src: url("/font/Moon2.0-Regular.otf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Moon 2.0";
  src: url("/font/Moon2.0-Bold.otf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

html {
  min-height: 100%;
}

html {
  min-height: 100%;
}

body {
  background-color: #101315;
  color: #f4f2ff;
  font-family: "Moon 2.0";
  letter-spacing: 0.1875rem;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

body #myVideo {
  -o-object-fit: cover;
     object-fit: cover;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  -webkit-filter: grayscale(80%) blur(2px);
          filter: grayscale(80%) blur(2px);
  opacity: 0.15;
}

body .container {
  background-color: #1d2225;
  position: relative;
  left: 0;
  right: 0;
  border-radius: 5px;
  width: 600px;
  margin: 18px auto;
  text-align: center;
  z-index: 1;
  /* The switch - the box around the slider */
}

body .container #switch__wrapper {
  text-align: right;
  margin: 20px;
  display: none;
}

body .container .switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  /* Hide default HTML checkbox */
  /* The slider */
}

body .container .switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

body .container .switch input:checked + .slider {
  background-color: #101315;
}

body .container .switch input:focus + .slider {
  -webkit-box-shadow: 0 0 1px #101315;
          box-shadow: 0 0 1px #101315;
}

body .container .switch input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  transform: translateX(26px);
}

body .container .switch .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  /* Rounded sliders */
}

body .container .switch .slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  background-repeat: no-repeat;
}

body .container .switch .slider.round {
  border-radius: 34px;
}

body .container .switch .slider.round:before {
  border-radius: 50%;
}

body .container .content__wrapper {
  padding: 50px;
}

body .container #pic {
  width: 150px;
  height: 150px;
  -o-object-fit: cover;
     object-fit: cover;
  border-radius: 50%;
}

body .container h1 {
  font-weight: bold;
  margin: 1.6rem 0 0.4375rem 0;
}

body .container h2 {
  font-size: 17px;
  color: #358CC3;
  margin: 0;
}

body .container h3 {
  color: #696969;
  text-align: left;
}

body .container .socials {
  margin-top: 30px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

body .container .socials .social {
  text-decoration: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0 12px;
  color: #f4f2ff;
}

body .container .socials .social img {
  height: 32px;
}

body .container .socials .social span {
  margin-left: 10px;
}

body .container #games__section {
  margin-top: 50px;
}

body .container #games__section .games .game {
  height: 55px;
  margin: 15px 5px 0 0;
}

body .container #games__section .games .text {
  height: 45px;
}

body .container #skills__section {
  margin-top: 40px;
  text-align: left;
}

body .container #skills__section .skills {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

body .container #skills__section .skills .skill {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-top: 8px;
}

body .container #skills__section .skills .skill img {
  width: 32px;
}

body .container #skills__section .skills .skill .logo-only {
  height: 30px;
  width: auto;
}

body .container #skills__section .skills .skill span {
  margin-left: 10px;
}

@media (min-height: 927px) {
  body {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    height: 100%;
  }
  .container {
    margin: 0 auto !important;
  }
}

@media (max-width: 600px) {
  body .container {
    margin: 0;
  }
  body video {
    display: none;
  }
}

@media (max-width: 400px) {
  body .container .content__wrapper {
    padding: 50px 30px;
  }
}
/*# sourceMappingURL=styles.css.map */

